--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </a>
 
             <a
-              href="Christian_Matthews_CIO_Cover_Letter_2026.pdf" 
+              href="Christian_Matthews_CIO_CV_2026-merged.pdf" 
               target="_blank" rel="noopener noreferrer"
               className="px-6 py-3 rounded-full border border-slate-700 text-slate-300 hover:bg-slate-800 transition flex items-center gap-2"
             >
@@ -457,49 +457,59 @@
       </section>
     );
 
-    const AboutMe = () => (
-      <section id="about" className="py-24 px-6 bg-slate-950 border-t border-slate-800">
-        <div className="max-w-6xl mx-auto grid md:grid-cols-2 gap-16 items-center">
-           {/* IMAGE COLUMN */}
-           <div className="relative group mx-auto md:mx-0 order-first md:order-last">
-              <div className="w-64 h-64 md:w-80 md:h-80 rounded-2xl border-4 border-slate-800 shadow-2xl overflow-hidden relative z-10 bg-slate-800 grayscale group-hover:grayscale-0 transition duration-500">
-                <img 
-                  src="profile.png" 
-                  alt="Christian Matthews" 
-                  className="w-full h-full object-cover"
-                  onError={(e) => {
-                    e.target.onerror = null; 
-                    e.target.parentNode.innerHTML = '<div class="w-full h-full bg-slate-700 flex items-center justify-center text-3xl font-bold text-slate-400">CM</div>';
-                  }}
-                />
-              </div>
-              {/* Glow Effect */}
-              <div className="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-blue-500/20 blur-3xl rounded-full -z-10 group-hover:bg-blue-500/30 transition duration-500"></div>
-          </div>
+    const AboutMe = () => {
+      return (
+        <section id="about" className="py-24 px-6 bg-slate-950 border-t border-slate-800">
+          <div className="max-w-6xl mx-auto grid md:grid-cols-2 gap-16 items-center">
+             {/* IMAGE COLUMN */}
+             <div className="relative group mx-auto md:mx-0 order-first md:order-last">
+                <div 
+                  className="w-64 h-64 md:w-80 md:h-80 rounded-2xl border-4 border-slate-800 shadow-2xl overflow-hidden relative z-10 bg-slate-800"
+                >
+                  <img 
+                    src="profile.png" 
+                    alt="Christian Matthews" 
+                    className="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-500"
+                    onError={(e) => {
+                      e.target.onerror = null; 
+                      e.target.parentNode.innerHTML = `
+                        <div class="flex flex-col items-center justify-center h-full text-slate-500 text-center p-4">
+                          <div class="text-4xl mb-2">📷</div>
+                          <div class="font-bold text-white mb-1">Image Not Found</div>
+                          <div class="text-xs">Ensure profile.png is in the same folder</div>
+                        </div>
+                      `;
+                    }}
+                  />
+                </div>
+                {/* Glow Effect */}
+                <div className="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-64 h-64 bg-blue-500/20 blur-3xl rounded-full -z-10 group-hover:bg-blue-500/30 transition duration-500"></div>
+            </div>
 
-          {/* TEXT COLUMN */}
-          <div>
-            <div className="inline-block px-3 py-1 mb-6 rounded-full bg-slate-800 border border-slate-700 text-teal-400 text-xs font-bold tracking-widest uppercase">
-              Leadership Philosophy
-            </div>
-            <h2 className="text-3xl md:text-4xl font-bold text-white mb-6">
-              A Steady Hand at the Helm
-            </h2>
-            <div className="space-y-6 text-lg text-slate-400 leading-relaxed">
-              <p>
-                My leadership style is defined by mutual transparency and trust. Having spent years in the marine and manufacturing sectors—at <strong>Beneteau</strong> and <strong>Leisure Pools</strong>—I learned early that you cannot manage a storm from a spreadsheet.
-              </p>
-              <p>
-                I believe that if I am checking reports before I am checking on my team, I have already lost. True scalability comes from retaining the talent that makes the company successful, which requires building genuine trust and securing buy-in from both the server room and the boardroom.
-              </p>
-              <p>
-                 While I bring the financial discipline of a strategic executive, I never lose the operational empathy of the person who has to keep the systems running. My goal is to create an environment where engineers feel empowered to speak the ground truth, feeding me the most accurate data unfiltered, allowing us to navigate complex integrations and stabilize critical infrastructure with calmness and clarity.
-              </p>
+            {/* TEXT COLUMN */}
+            <div>
+              <div className="inline-block px-3 py-1 mb-6 rounded-full bg-slate-800 border border-slate-700 text-teal-400 text-xs font-bold tracking-widest uppercase">
+                Leadership Philosophy
+              </div>
+              <h2 className="text-3xl md:text-4xl font-bold text-white mb-6">
+                A Steady Hand at the Helm
+              </h2>
+              <div className="space-y-6 text-lg text-slate-400 leading-relaxed">
+                <p>
+                  My leadership style is defined by mutual transparency and trust. Having spent years in the marine and manufacturing sectors—at <strong>Beneteau</strong> and <strong>Leisure Pools</strong>—I learned early that you cannot manage a storm from a spreadsheet.
+                </p>
+                <p>
+                  I believe that if I am checking reports before I am checking on my team, I have already lost. True scalability comes from retaining the talent that makes the company successful, which requires building genuine trust and securing buy-in from both the server room and the boardroom.
+                </p>
+                <p>
+                   While I bring the financial discipline of a strategic executive, I never lose the operational empathy of the person who has to keep the systems running. My goal is to create an environment where engineers feel empowered to speak the ground truth, feeding me the most accurate data unfiltered, allowing us to navigate complex integrations and stabilize critical infrastructure with calmness and clarity.
+                </p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
-    );
+        </section>
+      );
+    };
 
     const Contact = () => (
       <section id="contact" className="py-20 px-6 bg-slate-900 border-t border-slate-800">
