Update leadership description and copyright notice

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
               </h2>
               <div className="space-y-6 text-lg text-slate-400 leading-relaxed">
                 <p>
-                  My leadership style is defined by mutual transparency and trust. Having spent years in the marine and manufacturing sectors—at <strong>Beneteau</strong> and <strong>Leisure Pools</strong>—I learned early that you cannot manage a storm from a spreadsheet.
+                  My leadership style is defined by mutual transparency and trust. Having spent years in the marine and industrial composites manufacturing sectors at <strong>Beneteau</strong> and <strong>Explore Industries/Leisure Pools</strong>, I learned early that you cannot manage a storm from a spreadsheet.
                 </p>
                 <p>
                   I believe that if I am checking reports before I am checking on my team, I have already lost. True scalability comes from retaining the talent that makes the company successful, which requires building genuine trust and securing buy-in from both the server room and the boardroom.
@@ -548,7 +548,7 @@
             </div>
 
           <div className="mt-12 text-slate-600 text-sm">
-            &copy; 2026 Christian Matthews. Built with React & Tailwind.
+           Copyright &copy; 2026 Christian Matthews. All Rights Reserved.
           </div>
         </div>
       </section>
