Fix description formatting in index.html

--- a/index.html
+++ b/index.html
@@ -407,11 +407,13 @@
             logoUrl="https://s23.q4cdn.com/443634105/files/WINFusionLogo-H-4C.png"
             brandColor="#4F2C80"
             period="Jun 2015 – Nov 2016"
-            description="Promoted from Network VoIP Analyst II > Voice Analyst III > Reseller/CLEC Support Team Lead in <12 months."
+            description="Promoted from Network VoIP Analyst II to Voice Analyst III to Reseller/CLEC Support Team Lead in <12 months."
             highlights={[
               { title: "Rapid Ascent", body: "Selected to lead the newly formed CLEC support division in Greenville, SC, based on execution velocity and technical judgment." },
               { title: "Revenue Protection", body: "Managed high-stakes technical operations for wholesale/CLEC partners where individual accounts carried >$2,000,000/month billing exposure." },
-              { title: "Operational Definition", body: "Established support standards for the net-new team, moving the culture from 'ticket closing' to 'revenue retention.'" }
+              { title: "Operational Definition", body: "Established support standards for the net-new team, moving the culture from 'ticket closing' to 'revenue retention.'" },
+              { title: "Carrier-Grade Escalation", body: "Acted as final internal escalation point for complex SIP, PRI, and transport failures impacting live voice traffic across multi-state CLEC networks." },
+              { title: "Wholesale Network Ownership", body: "Owned end-to-end technical responsibility for reseller and CLEC environments, from provisioning through live-traffic stabilization, under strict SLA and penalty exposure." }
             ]}
           />
         </div>
