--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         <div className="max-w-4xl mx-auto">
           <div className="text-center mb-16">
             <div className="inline-flex items-center gap-3 px-3 py-1 mb-6 rounded-full bg-slate-800 border border-slate-700 text-purple-400 text-xs font-bold tracking-widest uppercase">
-              <Mic size={14} /> Beyond the Boardroom
+              Beyond the Boardroom
             </div>
             <h2 className="text-3xl md:text-4xl font-bold text-white mb-4">
               The Engineer & The Creative
