--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             logoUrl="https://www.seaisland.com/content/uploads/2024/12/Sea-Island-640x768.png"
             brandColor="#897A5E"
             period="Nov 2016 – Nov 2017"
-            description="Forbes Five-Star resort property valued at over $1B."
+            description="Recruited based on a rare blend of hands-on IT support roots, carrier-grade network engineering, technology leadership, and professional audio/AV production experience, well suited for a Forbes Five-Star luxury resort consolidating IT and AV under a new P&L model."
             highlights={[
               { title: "High-Stakes Event Support", body: "Coordinated technology delivery for high-grossing corporate events (>$5M revenue), including PGA Tour events and automotive board meetings." },
               { title: "Government/VIP Security", body: "Partnered directly with the Secret Service and FBI to implement segmented VLANs and secure Wi-Fi for high-profile government officials and VIP guests." },
