Revise descriptions in index.html for better clarity
Updated descriptions and personal narrative for clarity and detail.

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             logoUrl="https://www.seaisland.com/content/uploads/2024/12/Sea-Island-640x768.png"
             brandColor="#897A5E"
             period="Nov 2016 – Nov 2017"
-            description="Forbes Five-Star resort property valued at over $1B."
+            description="Recruited based on a rare blend of hands-on IT support roots, carrier-grade network engineering, technology leadership, and professional audio/AV production experience, well suited for a Forbes Five-Star luxury resort consolidating IT and AV under a new P&L model."
             highlights={[
               { title: "High-Stakes Event Support", body: "Coordinated technology delivery for high-grossing corporate events (>$5M revenue), including PGA Tour events and automotive board meetings." },
               { title: "Government/VIP Security", body: "Partnered directly with the Secret Service and FBI to implement segmented VLANs and secure Wi-Fi for high-profile government officials and VIP guests." },
@@ -576,13 +576,13 @@
             </h2>
             <div className="max-w-3xl mx-auto space-y-6">
               <p className="text-lg text-slate-400 leading-relaxed">
-                My path into IT started with music creation. In my early teens, as a weird, synthesizer-playing 13-year-old obsessed with Yanni and composing instrumental music, I became an SME out of necessity in production, signal flow, and understanding why things worked or didn’t in the studio. I learned early on that music itself might not reliably pay the bills, but diagnosing cables, routing signals, and blinking lights absolutely would.
+                My path into IT started with music creation. In my early teens, as a weird, synthesizer-playing 13-year-old obsessed with Yanni and composing instrumental music, I got good at production and signal flow because I had to understand why things worked or didn’t work in the studio. I learned early on that music itself might not reliably pay the bills, but diagnosing cables, routing signals, and blinking lights absolutely would.
               </p>
               <p className="text-lg text-slate-400 leading-relaxed">
                 That curiosity evolved into a career in technology, while music and live production remained a constant alongside it. When I’m not working, I’m usually in my home studio producing or directing live event A/V for churches. I’m also a husband, a dad to a 1-year-old, and we have three cats at home, which keeps life loud, busy, and grounded.
               </p>
               <p className="text-lg text-slate-400 leading-relaxed italic">
-                If you want to nerd out a bit next time we’re on the phone, the sections below go deeper into my non-IT background.
+                If you want to nerd out, the sections below go deeper outside of my IT career and focus on the audio, live production, and church systems work I’ve built.
               </p>
             </div>
           </div>
@@ -604,7 +604,7 @@
                   <div>
                     <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-2">The A1 Standard</h4>
                     <p className="text-slate-400 text-sm leading-relaxed">
-                      I’ve served as Front of House (A1) engineer for exclusive engagements at Sea Island, mixing for artists like <strong>Adele</strong> (Avid VENUE SC48), <strong>Darius Rucker</strong> (SSL Live L500), <strong>Darius Rucker of Hootie and the Blowfish</strong> (Allen & Heath Qu32), and <strong>The Marshall Tucker Band</strong> (Allen & Heath Qu32).
+                      I’ve served as Front of House (A1) engineer for exclusive engagements at Sea Island, mixing for artists like <strong>Adele</strong> (Avid VENUE SC48), <strong>Darius Rucker of Hootie and the Blowfish</strong> (Allen & Heath Qu32), and <strong>The Marshall Tucker Band</strong> (Allen & Heath Qu32).
                     </p>
                   </div>
                   <div>
