Correct job title casing in description

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             logoUrl="https://images.squarespace-cdn.com/content/v1/5a09abcb90bcce4bd5518c91/1515690831119-YJSK13DSLY1DM9RY7WWC/burwood-logo.png?format=1500w"
             brandColor="#16a34a"
             period="Mar 2024 – Aug 2024"
-            description="Role created after one year of high-impact delivery as technical architect/delivery lead on the firm’s largest account, combining team leadership with ongoing hands-on execution."
+            description="Role created after one year of high-impact delivery as Technical Architect and delivery lead on the firm’s largest account, combining team leadership with ongoing hands-on execution."
             highlights={[
               { title: "Dual-Role Leadership", body: "Balanced the player-coach model by managing team capacity and utilization against a $5.6M practice target while personally billing as a Technical Architect and delivery lead on complex engagements." },
               { title: "High-Touch Enterprise Escalation", body: "Served as the primary technical backstop for high-complexity enterprise clients, stepping in when delivery exceeded standard VAR capabilities and required deep architectural judgment." },
