--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             >
               <FileText size={18} /> Cover Letter
             </a>
+
+            <a
+              href="Christian_Matthews_CIO_Executive_Summary_2026.pdf" 
+              target="_blank" rel="noopener noreferrer"
+              className="px-6 py-3 rounded-full border border-slate-700 text-slate-300 hover:bg-slate-800 transition flex items-center gap-2"
+            >
+              <FileText size={18} /> Executive Summary
+            </a>
           </div>
         </div>
       </section>
