Update equipment details in index.html

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                   <div>
                     <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-2">The A1 Standard</h4>
                     <p className="text-slate-400 text-sm leading-relaxed">
-                      I’ve served as Front of House (A1) engineer for exclusive engagements at Sea Island, mixing for artists like <strong>Adele</strong> (Avid VENUE SC48), <strong>Darius Rucker of Hootie and the Blowfish</strong> (Allen & Heath Qu32), and <strong>The Marshall Tucker Band</strong> (Allen & Heath Qu32).
+                      I’ve served as Front of House (A1) engineer for exclusive engagements at Sea Island, mixing for artists like <strong>Adele</strong> (Avid VENUE SC48), <strong>Darius Rucker of Hootie and the Blowfish</strong> (Solid State Logic L500), and <strong>The Marshall Tucker Band</strong> (Allen & Heath Qu32).
                     </p>
                   </div>
                   <div>
@@ -628,7 +628,7 @@
                     </div>
                     <div className="flex items-start gap-2 text-sm text-slate-300">
                       <span className="text-purple-500 mt-1">▹</span>
-                      <span><strong>Consoles:</strong> Deep fluency in SSL Live, Avid VENUE, Midas Pro Series, and Allen & Heath ecosystems.</span>
+                      <span><strong>Consoles:</strong> Deep fluency in SSL Live, Avid VENUE, Behringer/Midas X32, Midas Pro 3/6/9/X Series, and Allen & Heath ecosystems.</span>
                     </div>
                   </div>
                 </div>
