--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             logoUrl="https://images.squarespace-cdn.com/content/v1/5a09abcb90bcce4bd5518c91/1515690831119-YJSK13DSLY1DM9RY7WWC/burwood-logo.png?format=1500w"
             brandColor="#16a34a"
             period="Feb 2023 – Feb 2024"
-            description="Recruited via LinkedIn to lead critical M&A integrations for the firm’s largest newly signed account (1,000+ locations; 250-site migration). Delivered nights and weekends on a contract basis concurrent with my Global IT Director role, fully disclosed and approved by executive leadership at both Burwood and Leisure Pools.
+            description="Recruited via LinkedIn to lead critical M&A integrations for the firm’s largest newly signed account (1,000+ locations; 250-site migration). Delivered nights and weekends on a contract basis concurrent with my Global IT Director role, fully disclosed and approved by executive leadership at both Burwood and Leisure Pools."
             highlights={[
               { title: "Mass-Scale Standardization", body: "Homogenized infrastructure across acquired sites by enforcing a fixed SD-WAN and switching template (VeloCloud, Cradlepoint LTE, Aruba), eliminating configuration drift and reducing operational variability." },
               { title: "Clinical Workflow Migration", body: "Led integration of specialized medical endpoints and PIMS databases, executing zero-data-loss cutovers in regulated, uptime-sensitive environments." },
