Enhance M&A Integration highlight with additional details
Expanded the M&A Integration highlight to include details about the acquisition of 13 manufacturing facilities globally.

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             highlights={[
               { title: "Cloud & Infrastructure Modernization", body: "Architected a hybrid infrastructure, integrating on-prem AD with M365 and Azure Entra ID to ensure high availability for corporate and manufacturing environments." },
               { title: "Secure Remote Access", body: "Designed and managed Azure Virtual Networks (VNets) to deploy Azure Virtual Desktop (AVD) environments, enabling secure, domain-joined remote access for support teams on personal devices." },
-              { title: "M&A Integration", body: "Built M365 tenants from scratch and led data library migrations to the cloud, seamlessly integrating employees and assets from acquired companies." },
+              { title: "M&A Integration", body: "Built M365 tenants from scratch and led data library migrations to the cloud, seamlessly integrating employees and assets from acquired companies. Company acquired/greenfielded 13 manufacturing facilities globally during my tenure." },
               { title: "Infrastructure Capital Arbitrage", body: "Replaced subscription-heavy Cisco Meraki stacks with high-performance Ubiquiti architecture across manufacturing sites. Eliminated licensing fees while improving throughput, yielding $500k in validated savings." },
               { title: "Global P&L Authority", body: "Managed a $2.1M operational budget, delivering executive-level reporting on global capital allocation, vendor consolidation, and opex reduction." }
             ]}
