Enhance Technical Architect experience details
Updated subRole and added details to highlights for Technical Architect experience.

--- a/index.html
+++ b/index.html
@@ -336,15 +336,15 @@
           <ExperienceItem
             isRight={true}
             role="Technical Architect"
-            subRole="(Contractor)"
+            subRole="Enterprise Networking & Hybrid Infrastructure (Contractor)"
             company="Burwood Group"
             logoUrl="https://images.squarespace-cdn.com/content/v1/5a09abcb90bcce4bd5518c91/1515690831119-YJSK13DSLY1DM9RY7WWC/burwood-logo.png?format=1500w"
             brandColor="#16a34a"
             period="Feb 2023 – Feb 2024"
             description="Recruited via LinkedIn to lead critical M&A integrations for the firm’s largest newly signed account (1,000+ locations; 250-site migration). Delivered nights and weekends on a contract basis concurrent with my Global IT Director role, fully disclosed and approved by executive leadership at both Burwood and Leisure Pools."
             highlights={[
-              { title: "Mass-Scale Standardization", body: "Homogenized infrastructure across acquired sites by enforcing a fixed SD-WAN and switching template (VeloCloud, Cradlepoint LTE, Aruba), eliminating configuration drift and reducing operational variability." },
-              { title: "Clinical Workflow Migration", body: "Led integration of specialized medical endpoints and PIMS databases, executing zero-data-loss cutovers in regulated, uptime-sensitive environments." },
+              { title: "Mass-Scale Standardization", body: "Homogenized infrastructure across acquired sites by enforcing a fixed SD-WAN and switching template (VeloCloud, Cradlepoint LTE, Aruba Central SDN), eliminating configuration drift and reducing operational variability." },
+              { title: "Clinical Workflow Migration", body: "Led integration of specialized medical endpoints and PIMS databases, executing zero-data-loss cutovers in regulated, uptime-sensitive environments. Migrated bare metal hosts and/or virtual hosts to standardized Dell imaged ESXi hosts and VM design centrally managed in vCenter." },
               { title: "Methodology Turnaround", body: "Took over a failing migration approach and rebuilt it into a repeatable, disciplined playbook that became the customer-mandated standard for all vendors supporting future implementation." },
               { title: "Command & Escalation", body: "Ran high-pressure weekend cutovers involving 20+ engineers and Smart Hands, coordinating up to five simultaneous site migrations while serving as final technical escalation." },
               { title: "Cutover Governance", body: "Built the go-live controls that prevented “hope-and-pray” migrations, established standardized implementation and test plans that included pre-cutover validation checklists, go/no-go gates, rollback criteria, and post-cutover validation steps so every site had a consistent, auditable outcome." }
