--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                   className="w-64 h-64 md:w-80 md:h-80 rounded-2xl border-4 border-slate-800 shadow-2xl overflow-hidden relative z-10 bg-slate-800"
                 >
                   <img 
-                    src="profile.png" 
+                    src="Profile.jpg" 
                     alt="Christian Matthews" 
                     className="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-500"
                     onError={(e) => {
