Refactor HTML structure and clean up comments

--- a/index.html
+++ b/index.html
@@ -5,23 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Christian Matthews | CIO & IT Executive</title>
 
-  <!-- SEO / Social -->
   <meta name="description" content="Christian Matthews — Strategic Technology Executive known for Capital Discipline and Operational Arbitrage." />
   <meta property="og:title" content="Christian Matthews | CIO & IT Executive" />
   <meta property="og:description" content="Delivering enterprise-grade reliability without enterprise-grade cost structures." />
   <meta property="og:type" content="website" />
 
-  <!-- React & ReactDOM -->
   <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-  <!-- Babel -->
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
   <style>
@@ -433,19 +428,19 @@
               <h3 className="text-xl font-bold text-white mb-6 leading-tight">Early Career Foundation</h3>
               
               <div className="mb-6">
-                 <div className="text-blue-400 font-medium">IT Support Specialist</div>
-                 <div className="text-slate-400 text-sm">Sonoco (Fortune 500 Manufacturing) | 2014</div>
-                 <p className="text-slate-400 text-sm mt-2 leading-relaxed">
-                   Frontline IT support in a safety-critical manufacturing environment, building early fluency in enterprise standards, asset control, and disciplined service delivery. Those principles later made me the person leadership relied on during COVID-era hypergrowth, when we were onboarding new hires daily and 16-week Dell and Lenovo lead times threatened to stall the business.
-                </p>
+                  <div className="text-blue-400 font-medium">IT Support Specialist</div>
+                  <div className="text-slate-400 text-sm">Sonoco (Fortune 500 Manufacturing) | 2014</div>
+                  <p className="text-slate-400 text-sm mt-2 leading-relaxed">
+                    Frontline IT support in a safety-critical manufacturing environment, building early fluency in enterprise standards, asset control, and disciplined service delivery. Those principles later made me the person leadership relied on during COVID-era hypergrowth, when we were onboarding new hires daily and 16-week Dell and Lenovo lead times threatened to stall the business.
+                 </p>
               </div>
 
               <div className="mb-6">
-                 <div className="text-blue-400 font-medium">IT Help Desk Technician</div>
-                 <div className="text-slate-400 text-sm">Florence-Darlington Tech. College | 2013</div>
-                 <p className="text-slate-400 text-sm mt-2 leading-relaxed">
-                   Recommended directly by my professors after my first semester to support campus IT operations. Built strong fundamentals in end-user support, troubleshooting, documentation, and public-sector systems that formed the foundation for everything that followed.
-                </p>
+                  <div className="text-blue-400 font-medium">IT Help Desk Technician</div>
+                  <div className="text-slate-400 text-sm">Florence-Darlington Tech. College | 2013</div>
+                  <p className="text-slate-400 text-sm mt-2 leading-relaxed">
+                    Recommended directly by my professors after my first semester to support campus IT operations. Built strong fundamentals in end-user support, troubleshooting, documentation, and public-sector systems that formed the foundation for everything that followed.
+                 </p>
               </div>
 
               <div>
@@ -528,7 +523,7 @@
                   <img 
                     src="Profile.jpg" 
                     alt="Christian Matthews" 
-                    className="w-full h-full object-cover grayscale group-hover:grayscale-0 transition duration-500"
+                    className="w-full h-full object-cover object-top"
                     onError={(e) => {
                       e.target.onerror = null; 
                       e.target.parentNode.innerHTML = `
@@ -562,7 +557,7 @@
                     I believe that if I am checking reports before I am checking on my team, I have already lost. True scalability comes from retaining the talent that makes the company successful, which requires building genuine trust and securing buy-in from both the server room and the boardroom.
                   </p>
                   <p>
-                     While I bring the financial discipline of a strategic executive, I never lose the operational empathy of the person who has to keep the systems running. My goal is to create an environment where engineers feel empowered to speak the ground truth, feeding me the most accurate data unfiltered, allowing us to navigate complex integrations and stabilize critical infrastructure with calmness and clarity.
+                      While I bring the financial discipline of a strategic executive, I never lose the operational empathy of the person who has to keep the systems running. My goal is to create an environment where engineers feel empowered to speak the ground truth, feeding me the most accurate data unfiltered, allowing us to navigate complex integrations and stabilize critical infrastructure with calmness and clarity.
                   </p>
                 </div>
               </div>
@@ -616,10 +611,10 @@
                     </p>
                   </div>
                   <div>
-                     <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-2">Hybrid Studio Architecture</h4>
-                     <p className="text-slate-400 text-sm leading-relaxed">
+                      <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-2">Hybrid Studio Architecture</h4>
+                      <p className="text-slate-400 text-sm leading-relaxed">
                         My home studio acts as my laboratory for precision. It is built around <strong>RME UFX III</strong> mastering-grade converters with a MADI network feeding <strong>Antelope Orion</strong> converters. I utilize <strong>McDSP APB</strong> for hybrid analog processing with instant recall, alongside classic <strong>SSL</strong> and <strong>SPL</strong> outboard gear.
-                     </p>
+                      </p>
                   </div>
                   <div className="grid grid-cols-2 gap-4 pt-2">
                     <div className="flex items-start gap-2 text-sm text-slate-300">
@@ -663,7 +658,7 @@
                       <span className="text-teal-500 mt-1">▹</span>
                       <span><strong>Lighting:</strong> Designed intelligent lighting plots using Leko Source Fours, custom Gobos, and truss-mounted arrays for brand-specific atmospherics.</span>
                     </li>
-                     <li className="flex items-start gap-2">
+                      <li className="flex items-start gap-2">
                       <span className="text-teal-500 mt-1">▹</span>
                       <span><strong>The Bridge:</strong> Applying the same rigor of presales development—selling multi-million dollar budgets to Ford Corporate—to creating sustainable technical teams for local church plants.</span>
                     </li>
@@ -692,14 +687,14 @@
                     </p>
                   </div>
                   <div className="grid grid-cols-1 md:grid-cols-2 gap-4">
-                     <div>
+                      <div>
                         <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-1">Mentorship</h4>
                         <p className="text-slate-400 text-sm">Training volunteer teams on signal flow, gain staging, and critical listening.</p>
-                     </div>
-                     <div>
+                      </div>
+                      <div>
                         <h4 className="text-sm font-bold text-slate-200 uppercase tracking-wide mb-1">The Goal</h4>
                         <p className="text-slate-400 text-sm">Helping pastors build technical infrastructures that support their vision without breaking their budget.</p>
-                     </div>
+                      </div>
                   </div>
                 </div>
               </div>
